--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="card top-border-card-one">
           <h2>Supervisor</h2>
           <p>Monitors activity to identify project roadblocks</p>
-        <div class="img-wrapper"><img src="/images/icon-supervisor.svg" alt="" /></div>
+        <div class="img-wrapper"><img src="images/icon-supervisor.svg" alt="" /></div>
         </div>
         <div class="card top-border-card-two">
           <h2>Team Builder</h2>
@@ -38,14 +38,14 @@
             Scans our talent network to create the optimal team for your project
           </p>
           <div class="img-wrapper">
-            <img src="/images/icon-team-builder.svg" alt="" />
+            <img src="images/icon-team-builder.svg" alt="" />
           </div>
         </div>
         <div class="card top-border-card-three">
           <h2>Karma</h2>
           <p>Regularly evaluates our talent to ensure quality</p>
           <div class="img-wrapper">
-            <img src="/images/icon-karma.svg" alt="" />
+            <img src="images/icon-karma.svg" alt="" />
           </div>
         </div>
         <div class="card top-border-card-four">
@@ -53,7 +53,7 @@
           <p>
             Uses data from past projects to provide better delivery estimates
           </p>
-          <div class="img-wrapper"><img src="/images/icon-calculator.svg" alt="" /></div>
+          <div class="img-wrapper"><img src="images/icon-calculator.svg" alt="" /></div>
         </div>
       </div>
     </section>
